elixir/force-app/main/default/objects/genesis__Asset_Information__c/genesis__Asset_Information__c.object-meta.xml
<CustomObject>
    <description>This object will store the asset information for individual</description>
    <label>Asset Information</label>
    <nameField>
        <label>Asset Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>