elixir/force-app/main/default/objects/genesis__Asset_Information__c/fields/genesis__Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Asset_Type__c</fullName>
    <description>Defines the type of asset, values could be Cash, Cash-Savings, Certificate of Deposits, Notes and Contracts held, Securities/Bonds, Real Estate</description>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Occupied</fullName>
                <default>true</default>
                <label>Owner Occupied</label>
            </value>
            <value>
                <fullName>Investment Property</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle Type</fullName>
            </value>
            <value>
                <fullName>Other Vehicles</fullName>
            </value>
            <value>
                <fullName>Home_Contents_Other_Personal_Assets</fullName>
                <label>Home Contents &amp; Other Personal Assets</label>
            </value>
            <value>
                <fullName>Other Assets</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Superannuation</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Shares</fullName>
            </value>
            <value>
                <fullName>Term Deposits</fullName>
            </value>
            <value>
                <fullName>Gifts</fullName>
            </value>
            <value>
                <fullName>Deposits Paid</fullName>
            </value>
            <value>
                <fullName>Total Assets</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
                <isActive>false</isActive>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Cash-Savings</fullName>
                <isActive>false</isActive>
                <label>Cash-Savings</label>
            </value>
            <value>
                <fullName>Certificate of Deposits</fullName>
                <isActive>false</isActive>
                <label>Certificate of Deposits</label>
            </value>
            <value>
                <fullName>Notes and Contracts held</fullName>
                <isActive>false</isActive>
                <label>Notes and Contracts held</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Real Estate</fullName>
                <isActive>false</isActive>
                <label>Real Estate</label>
            </value>
            <value>
                <fullName>Securities/Bonds</fullName>
                <isActive>false</isActive>
                <label>Securities/Bonds</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>