elixir/force-app/main/default/objects/genesis__Asset_Information__c/fields/genesis__Comments__c.field-meta.xml
<CustomField>
    <fullName>genesis__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>