elixir/force-app/main/default/objects/genesis__Asset_Information__c/fields/genesis__Contact__c.field-meta.xml
<CustomField>
    <fullName>genesis__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets Information</relationshipLabel>
    <relationshipName>Assets_Information</relationshipName>
    <type>Lookup</type>
</CustomField>