elixir/force-app/main/default/objects/genesis__Asset_Information__c/fields/genesis__Date_of_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>genesis__Date_of_Acquisition__c</fullName>
    <description>Date of Acquisition of asset</description>
    <label>Date of Acquisition</label>
    <type>Date</type>
</CustomField>