elixir/force-app/main/default/objects/genesis__Asset_Information__c/fields/genesis__Market_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Market_Value_Date__c</fullName>
    <description>Market value of asset as of this date</description>
    <label>Market Value Date</label>
    <type>Date</type>
</CustomField>