elixir/force-app/main/default/objects/genesis__Asset_Information__c/fields/genesis__Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Original_Amount__c</fullName>
    <description>Original amount of asset</description>
    <label>Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>